fix basic styles

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Rivera - Full Stack Developer Portfolio</title>
-    <meta name="description" content="Alex Rivera - Full Stack Developer specializing in React, Node.js, and modern web technologies. Building digital experiences that make a difference." />
+    <title>Satyam Chaturvedi - Full Stack Developer Portfolio</title>
+    <meta name="description" content="Satyam Chaturvedi - Full Stack Developer specializing in React, Node.js, and modern web technologies. Building digital experiences that make a difference." />
     <meta name="keywords" content="full stack developer, react developer, node.js, portfolio, web development, javascript, typescript" />
-    <meta property="og:title" content="Alex Rivera - Full Stack Developer Portfolio" />
+    <meta property="og:title" content="Satyam Chaturvedi - Full Stack Developer Portfolio" />
     <meta property="og:description" content="Full Stack Developer specializing in React, Node.js, and modern web technologies." />
     <meta property="og:type" content="website" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
